tests/should_fail/const_c.c
int main(void) {
	int arr[const 5];
}
